@@ -10,7 +10,7 @@ import static org.junit.jupiter.api.Assertions.*;
 class UsersFilterTest {
 
     @Test
-    void testFilterByRomaniaAndMoldova() {
+    void testFilterByExistedLocations() {
         final String ukraine = "Ukraine", romania = "Romania", moldova = "moldova", usa = "USA";
 
         UserEntry userFromUkraine1 = UserEntry.builder().location(ukraine).build();
@@ -23,9 +23,9 @@ class UsersFilterTest {
         UserEntry userFromUsa2 = UserEntry.builder().location(usa).build();
         UserEntry userFromUsa3 = UserEntry.builder().location(usa).build();
 
-        List<UserEntry> expected = Arrays.asList(
+        List<UserEntry> expected = List.of(
                 userFromRomania1, userFromRomania2, userFromMoldova1, userFromMoldova2, userFromMoldova3);
-        Collection<UserEntry> actual = Arrays.asList(
+        Collection<UserEntry> actual = List.of(
                 userFromUkraine1, userFromRomania1, userFromRomania2, userFromMoldova1, userFromMoldova2,
                 userFromMoldova3, userFromUsa1, userFromUsa2, userFromUsa3
         );
@@ -37,7 +37,7 @@ class UsersFilterTest {
     }
 
     @Test
-    void testFilterByEmpty() {
+    void testFilterByEmptyLocation() {
         final String ukraine = "Ukraine", romania = "Romania", moldova = "moldova", usa = "USA";
 
         UserEntry userFromUkraine1 = UserEntry.builder().location(ukraine).build();
@@ -50,7 +50,7 @@ class UsersFilterTest {
         UserEntry userFromUsa2 = UserEntry.builder().location(usa).build();
         UserEntry userFromUsa3 = UserEntry.builder().location(usa).build();
 
-        Collection<UserEntry> expected = Arrays.asList(
+        Collection<UserEntry> expected = List.of(
                 userFromUkraine1, userFromRomania1, userFromRomania2, userFromMoldova1, userFromMoldova2,
                 userFromMoldova3, userFromUsa1, userFromUsa2, userFromUsa3
         );
@@ -62,7 +62,7 @@ class UsersFilterTest {
     }
 
     @Test
-    void testFilterByNotExisted() {
+    void testFilterByNotExistedLocation() {
         final String ukraine = "Ukraine", romania = "Romania", moldova = "moldova", usa = "USA";
 
         UserEntry userFromUkraine1 = UserEntry.builder().location(ukraine).build();
@@ -75,7 +75,7 @@ class UsersFilterTest {
         UserEntry userFromUsa2 = UserEntry.builder().location(usa).build();
         UserEntry userFromUsa3 = UserEntry.builder().location(usa).build();
 
-        Collection<UserEntry> actual = Arrays.asList(
+        Collection<UserEntry> actual = List.of(
                 userFromUkraine1, userFromRomania1, userFromRomania2, userFromMoldova1, userFromMoldova2,
                 userFromMoldova3, userFromUsa1, userFromUsa2, userFromUsa3
         );
@@ -88,24 +88,114 @@ class UsersFilterTest {
     void testFilterByMinAnswersCount() {
         Random random = new Random();
         UserEntry user1WithAnswerLess100 =
-                UserEntry.builder().answer_count(random.nextInt( 100)).build();
+                UserEntry.builder().answer_count(random.nextInt(100)).build();
         UserEntry user2WithAnswerLess100 =
-                UserEntry.builder().answer_count(random.nextInt( 100)).build();
+                UserEntry.builder().answer_count(random.nextInt(100)).build();
         UserEntry user1WithAnswerOver100 =
-                UserEntry.builder().answer_count(random.nextInt( 101, 1_000)).build();
+                UserEntry.builder().answer_count(random.nextInt(101, 1_000)).build();
         UserEntry user2WithAnswerOver100 =
-                UserEntry.builder().answer_count(random.nextInt( 101, 1_000)).build();
+                UserEntry.builder().answer_count(random.nextInt(101, 1_000)).build();
         UserEntry user3WithAnswerOver100 =
-                UserEntry.builder().answer_count(random.nextInt( 101, 1_000)).build();
+                UserEntry.builder().answer_count(random.nextInt(101, 1_000)).build();
         UserEntry user4WithAnswerOver100 =
-                UserEntry.builder().answer_count(random.nextInt( 101, 1_000)).build();
+                UserEntry.builder().answer_count(random.nextInt(101, 1_000)).build();
 
-        Collection<UserEntry> actual = Arrays.asList(
+        Collection<UserEntry> actual = List.of(
                 user1WithAnswerLess100, user2WithAnswerLess100, user1WithAnswerOver100,
                 user2WithAnswerOver100, user3WithAnswerOver100, user4WithAnswerOver100
         );
 
         actual = UsersFilter.createFilter(actual).filterByMinAnswersCount(101).getResult();
         assertFalse(actual.stream().anyMatch(u -> u.getAnswer_count() < 100));
+    }
+
+    @Test
+    void testFilterByExistedTags() {
+        final String java = "java", maven = "maven", cSharp = "c#", docker = "docker";
+        String[] tagsForFilter = { java, maven };
+
+        UserEntry userWithAllTags1 = UserEntry.builder().tags(List.of(java, maven, cSharp, docker)).build();
+        UserEntry userWithAllTags2 = UserEntry.builder().tags(List.of(java, maven, docker)).build();
+        UserEntry userWithAllTags3 = UserEntry.builder().tags(List.of(java, maven)).build();
+        UserEntry userWithNotAllTags1 = UserEntry.builder().tags(List.of(java, cSharp, docker)).build();
+        UserEntry userWithNotAllTags2 = UserEntry.builder().tags(List.of(maven, cSharp, docker)).build();
+        UserEntry userWithNotAllTags3 = UserEntry.builder().tags(List.of(java, docker)).build();
+        UserEntry userWithNotAllTags4 = UserEntry.builder().tags(List.of(maven, cSharp)).build();
+        UserEntry userWithNotAllTags5 = UserEntry.builder().tags(List.of(maven)).build();
+        UserEntry userWithNotAllTags6 = UserEntry.builder().tags(List.of(java)).build();
+        UserEntry userWithoutTags1 = UserEntry.builder().tags(List.of(cSharp)).build();
+        UserEntry userWithoutTags2 = UserEntry.builder().tags(List.of(docker)).build();
+        UserEntry userWithoutTags3 = UserEntry.builder().build();
+
+
+        List<UserEntry> expected = List.of(
+                userWithAllTags1, userWithAllTags2, userWithAllTags3,
+                userWithNotAllTags1, userWithNotAllTags2, userWithNotAllTags3,
+                userWithNotAllTags4, userWithNotAllTags5, userWithNotAllTags6);
+        Collection<UserEntry> actual = List.of(
+                userWithAllTags1, userWithAllTags2, userWithAllTags3,
+                userWithNotAllTags1, userWithNotAllTags2, userWithNotAllTags3,
+                userWithNotAllTags4, userWithNotAllTags5, userWithNotAllTags6,
+                userWithoutTags1, userWithoutTags2, userWithoutTags3);
+
+        actual = UsersFilter.createFilter(actual).filterByTags(tagsForFilter).getResult();
+        assertEquals(expected.size(), actual.size());
+        assertTrue(expected.containsAll(actual));
+    }
+
+    @Test
+    void testFilterByEmptyTags() {
+        final String java = "java", maven = "maven", cSharp = "c#", docker = "docker";
+
+        UserEntry userWithAllTags1 = UserEntry.builder().tags(List.of(java, maven, cSharp, docker)).build();
+        UserEntry userWithAllTags2 = UserEntry.builder().tags(List.of(java, maven, docker)).build();
+        UserEntry userWithAllTags3 = UserEntry.builder().tags(List.of(java, maven)).build();
+        UserEntry userWithNotAllTags1 = UserEntry.builder().tags(List.of(java, cSharp, docker)).build();
+        UserEntry userWithNotAllTags2 = UserEntry.builder().tags(List.of(maven, cSharp, docker)).build();
+        UserEntry userWithNotAllTags3 = UserEntry.builder().tags(List.of(java, docker)).build();
+        UserEntry userWithNotAllTags4 = UserEntry.builder().tags(List.of(maven, cSharp)).build();
+        UserEntry userWithNotAllTags5 = UserEntry.builder().tags(List.of(maven)).build();
+        UserEntry userWithNotAllTags6 = UserEntry.builder().tags(List.of(java)).build();
+        UserEntry userWithoutTags1 = UserEntry.builder().tags(List.of(cSharp)).build();
+        UserEntry userWithoutTags2 = UserEntry.builder().tags(List.of(docker)).build();
+        UserEntry userWithoutTags3 = UserEntry.builder().build();
+
+        Collection<UserEntry> expected = List.of(
+                userWithAllTags1, userWithAllTags2, userWithAllTags3,
+                userWithNotAllTags1, userWithNotAllTags2, userWithNotAllTags3,
+                userWithNotAllTags4, userWithNotAllTags5, userWithNotAllTags6,
+                userWithoutTags1, userWithoutTags2, userWithoutTags3);
+        Collection<UserEntry> actual = new ArrayList<>(expected);
+
+        actual = UsersFilter.createFilter(actual).filterByTags().getResult();
+        assertEquals(expected.size(), actual.size());
+        assertTrue(expected.containsAll(actual));
+    }
+
+    @Test
+    void testFilterByNotExistedTags() {
+        final String java = "java", maven = "maven", cSharp = "c#", docker = "docker";
+
+        UserEntry userWithAllTags1 = UserEntry.builder().tags(List.of(java, maven, cSharp, docker)).build();
+        UserEntry userWithAllTags2 = UserEntry.builder().tags(List.of(java, maven, docker)).build();
+        UserEntry userWithAllTags3 = UserEntry.builder().tags(List.of(java, maven)).build();
+        UserEntry userWithNotAllTags1 = UserEntry.builder().tags(List.of(java, cSharp, docker)).build();
+        UserEntry userWithNotAllTags2 = UserEntry.builder().tags(List.of(maven, cSharp, docker)).build();
+        UserEntry userWithNotAllTags3 = UserEntry.builder().tags(List.of(java, docker)).build();
+        UserEntry userWithNotAllTags4 = UserEntry.builder().tags(List.of(maven, cSharp)).build();
+        UserEntry userWithNotAllTags5 = UserEntry.builder().tags(List.of(maven)).build();
+        UserEntry userWithNotAllTags6 = UserEntry.builder().tags(List.of(java)).build();
+        UserEntry userWithoutTags1 = UserEntry.builder().tags(List.of(cSharp)).build();
+        UserEntry userWithoutTags2 = UserEntry.builder().tags(List.of(docker)).build();
+        UserEntry userWithoutTags3 = UserEntry.builder().build();
+
+        Collection<UserEntry> actual = List.of(
+                userWithAllTags1, userWithAllTags2, userWithAllTags3,
+                userWithNotAllTags1, userWithNotAllTags2, userWithNotAllTags3,
+                userWithNotAllTags4, userWithNotAllTags5, userWithNotAllTags6,
+                userWithoutTags1, userWithoutTags2, userWithoutTags3);
+
+        actual = UsersFilter.createFilter(actual).filterByTags("Not Existed").getResult();
+        assertTrue(actual.isEmpty());
     }
 }
